--- a/backend/src/main/resources/templates/perfil.html
+++ b/backend/src/main/resources/templates/perfil.html
@@ -16,6 +16,9 @@
         .dropdown-toggle::after {
             display: none !important;
         }
+        .heart-btn.liked svg {
+            fill: red;
+        }
     </style>
 
 </head>
@@ -140,7 +143,7 @@
                                 <div class="card-footer d-flex align-items-center">
                                     <div class="btns-right d-flex">
                                         <form th:action="@{/darLike/__${publicacion.id}__}" method="post" class="d-flex align-items-center">
-                                            <button type="submit" class="btn like-btn heart-btn" >                                        
+                                            <button type="submit" class="btn like-btn heart-btn" th:classappend="${usuarioDioLikeMap.get(publicacion.id)} ? 'liked' : ''">                                        
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                      fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                                                 <path fill-rule="evenodd"
@@ -214,6 +217,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+        <script>
+            const heartButtons = document.querySelectorAll(".heart-btn");
+            heartButtons.forEach((heartButton) => {
+                heartButton.addEventListener("click", () => {
+                    heartButton.classList.toggle("liked");
+                });
+            });
+            </script>
 </body>
 
 </html>
