vista error y su controlador, mas query arreglada

--- a/backend/src/main/resources/static/css/styles.css
+++ b/backend/src/main/resources/static/css/styles.css
@@ -410,6 +410,11 @@ header{
     font-size: 16px;
     margin-bottom: 5px;
 }
-
+.errorMensaje {
+    color: #000;
+/*    -webkit-text-stroke: 1px black;*/
+    font-size: x-large;
+  
+}
 
 
