--- a/backend/src/main/resources/static/css/home.css
+++ b/backend/src/main/resources/static/css/home.css
@@ -1,5 +1,6 @@
 .tendencias-container {
     background-image: url("../img/fondoCards.png");
+    background-size: cover;
 }
 .tendencias-container .carousel-image {
     height: calc(100vh - 60px);
