--- a/backend/src/main/resources/static/css/styles.css
+++ b/backend/src/main/resources/static/css/styles.css
@@ -186,7 +186,7 @@ nav a {
     position: relative;
 }
 .blurry-background {
-    background-image: url('../img/fondo1.png');
+    background-image: url('../img/fondoCrear.png');
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
