--- a/backend/src/main/resources/templates/perfil.html
+++ b/backend/src/main/resources/templates/perfil.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/home.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>FashionNet</title>
     <style>
         .dropdown-toggle::after {
@@ -113,7 +115,7 @@
                 <div class="contenedor-cabezera">
                     <div class="cabezera1">
                         <h1 th:text="${usuario.nombreUsuario}"></h1>
-                        <a th:if="${usuario.id != session.usuariosession.id}" class="report-link btn btn-outline-secondary" type="button"  href="#">Reportar</a>
+                        <a th:if="${usuario.id != session.usuariosession.id}" class="report-link btn btn-outline-secondary" type="button"  href="#" data-toggle="modal" data-target="#reportModal" th:data-id="${usuario.id}" data-tipo="usuario">Reportar</a>
                         <!-- <svg aria-label="Opciones" class="_8-yf5 " fill="#262626" height="24" viewBox="0 0 48 48"
                             width="24">
                             <path clip-rule="evenodd"
@@ -175,7 +177,7 @@
                                             </svg>
                                         </button>
                                         <ul class="dropdown-menu dropdown-menu-end">
-                                            <li><a class="dropdown-item" href="#">Reportar</a></li>
+                                            <li><a class="dropdown-item report-link" href="#" data-toggle="modal" data-target="#reportModal" th:data-id="${publicacion.id}" data-tipo="publicacion">Reportar</a></li>
                                             <li><a class="dropdown-item" th:href="@{/disenador/ver/__${publicacion.id}__}">Ver publicación</a></li>
                                             <li th:if="${usuario.id == session.usuariosession.id}" sec:authorize="hasRole('DISENIADOR')"><a role="button" type="submit" class="dropdown-item" th:href= "@{/disenador/eliminar/__${publicacion.id}__}"> Eliminar</a></li>
                                             <li><a class="dropdown-item" href="#">Cerrar</a></li>
@@ -215,6 +217,40 @@
         </div>
 
     </div> -->
+    
+        <div class="modal fade" id="reportModal" tabindex="-1" role="dialog" aria-labelledby="reportModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="reportModalLabel"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                 <form th:action="@{/reporte/registroReporte}" method="POST">                    
+                    <input name="id" placeholder="id">                    
+                    <div class="form-group">
+                    <label for="categoria">Categoría</label>
+                    <select name="categoria" class="form-control">
+                    <option value="" disabled selected>Selecciona una categoría</option>
+                    <option th:each="categoria : ${T(com.egg.backend.enumeraciones.Categoria).values()}"
+                             th:value="${categoria}" th:text="${categoria}"></option>
+                    </select>
+                    <br>
+                    <textarea name="descripcion" class="form-control" rows="3" placeholder="Describe el reporte"></textarea>
+                    <div class="d-flex justify-content-center align-items-center">
+                    <button type="submit" class="btn btn-login d-block">Enviar Reporte</button>
+                    </div>
+                </form>
+            </div>
+                    </div>
+            <div class="modal-footer d-flex justify-content-center align-items-center">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
@@ -227,6 +263,21 @@
                 });
             });
             </script>
+            <script>
+        $(document).ready(function() {
+        $(".report-link").click(function() {
+            var publicacionId = $(this).data("id");
+             var tipo = $(this).data("tipo");
+            console.log(publicacionId);
+             var modalTitle = tipo === "usuario" ? "Reportar Usuario" : "Reportar Publicación";
+             $("#reportModal .modal-title").text(modalTitle);
+            $("#reportModal input[name='id']").val(publicacionId);            
+        });
+    });
+    </script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
