--- a/backend/src/main/resources/templates/publicacion_detalle.html
+++ b/backend/src/main/resources/templates/publicacion_detalle.html
@@ -232,11 +232,13 @@
                                 </select>
                                 <br>
                                 <textarea name="descripcion" class="form-control" rows="3" placeholder="Describe el reporte"></textarea>
+                                <div class="d-flex justify-content-center align-items-center">
                                 <button type="submit" class="btn btn-login d-block">Enviar Reporte</button>
+                                </div>
                         </form>
                     </div>
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer d-flex justify-content-center align-items-center">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
