Se resuelve problema de ruta reporteControlador

--- a/backend/src/main/resources/templates/home.html
+++ b/backend/src/main/resources/templates/home.html
@@ -270,7 +270,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                 <form th:action="@{/reporte/registroReporte}" method="POST">                    
+                 <form th:action="@{/reporte/registroReporte(from='inicio')}" method="POST">
                     <input name="id" placeholder="id">                    
                     <div class="form-group">
                     <label for="categoria">Categoría</label>
