--- a/backend/src/main/resources/templates/perfil.html
+++ b/backend/src/main/resources/templates/perfil.html
@@ -228,7 +228,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                 <form th:action="@{/reporte/registroReporte}" method="POST">                    
+                 <form th:action="@{/reporte/registroReporte(from='perfil')}" method="POST">
                     <input name="id" placeholder="id">                    
                     <div class="form-group">
                     <label for="categoria">Categoría</label>
