--- a/backend/src/main/resources/templates/publicacion_detalle.html
+++ b/backend/src/main/resources/templates/publicacion_detalle.html
@@ -120,7 +120,7 @@
                                                 <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
                                                 </svg>
                                             </button>
-                                            <ul class="dropdown-menu dropdown-menu-end">
+                                            <ul class="dropdown-menu dropdown-menu-end" th:if="${session.usuariosession != null}" sec:authorize="hasAnyRole('DISENIADOR', 'USER')">
                                                 <li><a class="dropdown-item report-link" href="#" data-toggle="modal" data-target="#reportModal" th:data-id="${comentario.id}">Reportar</a></li>
                                                 <li><a class="dropdown-item" href="#">Cerrar</a></li>
                                             </ul>
