carrucel,home en error, modifical en dashboard

--- a/backend/src/main/resources/static/css/home.css
+++ b/backend/src/main/resources/static/css/home.css
@@ -10,7 +10,7 @@
     display: flex;
 }
 .tendencias-container .card {
-    margin: 0 0.5em;
+/*    margin: 0 0.5em;*/
     width: calc(100% / 3);
 }
 .tendencias-container .carousel {
