--- a/backend/src/main/resources/templates/error.html
+++ b/backend/src/main/resources/templates/error.html
@@ -16,38 +16,36 @@
 
 <body>
   <nav class="navbar navbar-expand-lg" id="nav-scrolled" aria-label="Eleventh navbar example">
-    <div class="container-fluid">
-      <a class="navbar-brand d-flex align-items-center" href="/inicio">
-        <img src="/img/logo.png" alt="Logo" width="45" height="40" class="d-inline-block" />
-        <span>Fashion.Net</span>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample09"
-        aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img src="/img/logo.png" alt="Logo" width="45" height="40" class="d-inline-block" />
+                <span>Fashion.Net</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample09"
+                aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExample09">
-        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-          <li class="nav-item me-3">
-             <a class="nav-link" href="/inicio"><svg aria-label="Inicio" class="bi pe-none me-2 _8-yf5 " fill="#262626" height="22"
+            <div class="collapse navbar-collapse justify-content-end" id="navbarsExample09">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item me-2">
+                        <a class="nav-link" href="/inicio"><svg aria-label="Inicio" class="bi pe-none me-2 _8-yf5 " fill="#262626" height="22"
                             viewBox="0 0 48 48" width="22">
                             <path
                                 d="M45.3 48H30c-.8 0-1.5-.7-1.5-1.5V34.2c0-2.6-2-4.6-4.6-4.6s-4.6 2-4.6 4.6v12.3c0 .8-.7 1.5-1.5 1.5H2.5c-.8 0-1.5-.7-1.5-1.5V23c0-.4.2-.8.4-1.1L22.9.4c.6-.6 1.5-.6 2.1 0l21.5 21.5c.4.4.6 1.1.3 1.6 0 .1-.1.1-.1.2v22.8c.1.8-.6 1.5-1.4 1.5zm-13.8-3h12.3V23.4L24 3.6l-20 20V45h12.3V34.2c0-4.3 3.3-7.6 7.6-7.6s7.6 3.3 7.6 7.6V45z">
                             </path>
                         </svg></a>
-          </li>
-          
-        </ul>
+                        
+                    </li>
+                    
+                   
+                    
+                </ul>
 
-        <ul class="nav justify-content-end nav-izq">
-
-          
-
-        </ul>
-
-      </div>
-    </div>
-  </nav>
+                
+            </div>
+        </div>
+    </nav>
 
   <main>
     
